# Tregel

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindGRPC.cmake
conf/: master.xml  master.xml.template  worker.xml.template  worker0.xml  worker1.xml  worker2.xml  worker3.xml  worker4.xml  worker5.xml  worker6.xml  worker7.xml  worker8.xml  worker9.xml
sbin/: prepare.py  test.sh
src/master/: CMakeLists.txt  master.cc  masterImpl.cc  masterImpl.h
src/proto/: CMakeLists.txt  master.proto  worker.proto
src/util/: CMakeLists.txt  XmlLoader.cc  XmlLoader.h  logger.h
src/worker/: CMakeLists.txt  compute.cc  worker.cc  workerImpl.cc  workerImpl.h
